--- a/auth/signup.html
+++ b/auth/signup.html
@@ -12,13 +12,13 @@
     <!-- Bootstrap CDN -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <!-- Main Stylesheet -->
-    <link rel="stylesheet" href="signup.css">
+    <link rel="stylesheet" href="../main.css">
     <!-- Googel Font -->
     <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700|Roboto:300,400,500" rel="stylesheet">
     <!-- Font-awesome -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.0/css/all.css" integrity="sha384-Mmxa0mLqhmOeaE8vgOSbKacftZcsNYDjQzuCOm6D02luYSzBG8vpaOykv9lFQ51Y" crossorigin="anonymous">
 </head>
-<body>
+<body id="signup-body">
     <header>
         <div class="signup-header text-center">
             <h1>WAKACHURCH</h1>
@@ -73,10 +73,10 @@
                                 <input type="checkbox" class="form-check-input" id="hereby-agree">
                                 <label class="form-check-label" for="hereby-agree">I hereby agree to the <span class="text-danger"><a href="#" class="text-danger">Terms and Condition</a></span></label>   
                             </div>                           
-                            <button type="submit" class="btn btn-dark">Sign Up</button>
+                            <button type="submit" class="signup-btn btn btn-dark">Sign Up</button>
                         </form>
                         <div class="mt-5 text-center">
-                            <p class="btn btn-secondary">Already have an account? <a class="text-danger" href="../auth/login.html"> Log in</a></p>
+                            <p class="btn signup-btn-secondary btn-secondary">Already have an account? <a class="text-danger" href="../auth/login.html"> Log in</a></p>
                         </div>                        
                     </div>
                     <div class="col-lg-4"></div>
